--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Pinegrow Web Editor - SAAS Bootstrap v5 Template">
+        <meta name="description" content="IV Congresso Ibero Americano - Unesc">
         <meta name="author" content="">
         <link rel="icon" href="imgs/favicon.ico" "">
         <title>IV Congresso Ibero-Americano - Unesc</title>
