--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="IV Congresso Ibero Americano - Unesc">
-        <meta name="author" content="">
+        <meta name="author" content="Wender Firmino / Lucas Damazio">
         <link rel="icon" href="imgs/favicon.ico" "">
         <title>IV Congresso Ibero-Americano - Unesc</title>
         <!-- Bootstrap core CSS -->
